WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249129
Debug build fixes with assertions disabled
https://bugs.webkit.org/show_bug.cgi?id=249129
Summary
Debug build fixes with assertions disabled
Claudio Saavedra
Reported
2022-12-12 02:34:23 PST
Trying to get a decent stacktrace of a release crash by disabling assertions I found a lot of unused variable warnings that break the build due to -Werror. Fix them
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2022-12-12 02:38:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7476
EWS
Comment 2
2022-12-13 05:29:19 PST
Committed
257784@main
(b9d802d8c645): <
https://commits.webkit.org/257784@main
> Reviewed commits have been landed. Closing PR #7476 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-13 05:30:16 PST
<
rdar://problem/103297948
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug